tests/purs/failing/UnusableTypeClassMethodSynonym.out
Error found:
in module [33mMain[0m
at tests/purs/failing/UnusableTypeClassMethodSynonym.purs:6:1 - 8:11 (line 6, column 1 - line 8, column 11)

  The declaration [33mc[0m contains arguments that couldn't be determined.
  These arguments are: { a }

in type class declaration for [33mC[0m

See https://github.com/purescript/documentation/blob/master/errors/UnusableDeclaration.md for more information,
or to contribute content related to this error.

